# Cinema-event-system

./: .env.example  .gitignore  README.md  make_admin.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: health.py
app/api/v1/admin/: bookings.py  events.py  payments.py  reports.py  users.py
app/api/v1/auth/: oauth.py  router.py
app/api/v1/bookings/: router.py  seats.py
app/api/v1/events/: router.py
app/api/v1/payments/: router.py  stripe.py
app/api/v1/tickets/: router.py
app/api/v1/venues/: router.py
app/core/: __init__.py  email.py  exceptions.py  logging.py  pagination.py  permissions.py  security.py
app/db/: __init__.py  base_repository.py  indexes.py  mongodb.py
app/middleware/: error_handler.py  request_id.py
app/models/: booking.py  event.py  payment.py  user.py  venue.py
app/repositories/: booking_repo.py  event_repo.py  payment_repo.py  user_repo.py  venue_repo.py
app/schemas/: auth.py  booking.py  event.py  payment.py  user.py  venue.py
app/services/: admin_service.py  auth_service.py  booking_service.py  email_service.py  event_service.py  oauth_service.py  seat_service.py  stripe_service.py  ticket_service.py
app/tasks/: cleanup_tasks.py  email_tasks.py
app/templates/: __init__.py  booking_cancellation.html  booking_confirmation.html  e_ticket.html  event_cancelled.html  event_reminder.html  password_reset.html  verify_email.html
app/utils/: pdf.py  qr_code.py
tests/unit/: test_permissions.py
